Fix grid scaling spacing and border.

--- a/css/main.css
+++ b/css/main.css
@@ -189,11 +189,6 @@ Grid iframe
 	max-width: 100%;
 }
 
-.mds-container #theimage {
-	border-bottom: 1px solid #D4D6D4;
-	border-right: 1px solid #D4D6D4;
-}
-
 /*
 Footer
 */
